--- a/client/package.json
+++ b/client/package.json
@@ -4,15 +4,20 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
+    "@auth0/auth0-react": "^1.10.1",
     "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "moment": "^2.29.3",
     "react": "^18.1.0",
+    "react-calendar": "^3.7.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
+    "react-moment": "^1.1.2",
     "react-quill": "^1.3.5",
+    "react-render-html": "^0.6.0",
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
