--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "@testing-library/user-event": "^13.5.0",
     "moment": "^2.29.3",
     "react": "^18.1.0",
+    "react-big-calendar": "^0.40.1",
     "react-calendar": "^3.7.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
